--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -2,3 +2,13 @@
 	background-color: black;
 	
 }
+.rotate
+{
+  -webkit-animation:spin 0.1s linear infinite;
+  -moz-animation:spin 0.1s linear infinite;
+  animation:spin 0.1s linear infinite;
+}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
